# actix-tutorial

./: Cargo.toml  README.md
src/: main.rs  models.rs  schema.rs
templates/: 404.html  edit.html  form.html  page.html
