[package]
name = "memo-form"
version = "0.0.1"
authors = ["Ken Sakai <colsec03@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10"
actix-web = "3"
actix-files = "0.3"
actix-session = "0.4"
actix-cors = "0.5"
diesel = { version = "1.4.5", features = ["sqlite", "r2d2", "chrono"] }
libsqlite3-sys = { version = "0.9.1", features = ["bundled"]}
diesel_migrations = "1.4.0"
tera = "1"
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4.19", features = ["serde"] }
env_logger = "0.8"
